--- a/pom.xml
+++ b/pom.xml
@@ -4,85 +4,91 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.googlecode.wmbutil</groupId>
-  <artifactId>wmb-util</artifactId>
+  <artifactId>wmb-parent</artifactId>
   <version>0.3.5-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-  <name>WebSphere Message Broker utilities</name>
+  <name>WebSphere Message Broker Extensions - Parent</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <scm>
-    <connection>scm:git:git://github.com/ukcrpb6/wmb-util</connection>
-    <developerConnection>scm:git:git://github.com/ukcrpb6/wmb-util</developerConnection>
-    <url>http://www.github.com/ukcrpb6/wmb-util</url>
-  </scm>
+  <modules>
+    <module>wmb-util</module>
+    <module>wmb-hibernate</module>
+    <module>wmb-cache-dao</module>
+    <module>wmb-logging-dao</module>
+  </modules>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-release-plugin</artifactId>
-        <configuration>
-          <tagBase>
-            https://wmb-util.googlecode.com/svn/wmb-util/tags
-          </tagBase>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <version>2.3</version>
-        <configuration>
-          <downloadSources>true</downloadSources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.1</version>
-        <configuration>
-          <archive>
-            <addMavenDescriptor>false</addMavenDescriptor>
-          </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.0.2</version>
-        <executions>
-          <execution>
-            <id>create-source-jar</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.3</version>
-        <configuration>
-          <descriptors>
-            <descriptor>src/main/assembly/broker.xml</descriptor>
-          </descriptors>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+  <dependencyManagement>
+    <dependencies>
+      <!-- Message Broker -->
+      <dependency>
+        <groupId>com.ibm.broker</groupId>
+        <artifactId>javacompute</artifactId>
+        <version>8.0.0.0</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.ibm.broker</groupId>
+        <artifactId>jplugin2</artifactId>
+        <version>8.0.0.0</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>com.ibm.mq</groupId>
+        <artifactId>headers</artifactId>
+        <version>7.0.1.8</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <!-- Guava -->
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>12.0</version>
+      </dependency>
+
+      <!-- Unit tests -->
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.9</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>1.9.0</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>jaxen</groupId>
+        <artifactId>jaxen</artifactId>
+        <version>1.1.3</version>
+        <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>maven-plugins</groupId>
+            <artifactId>maven-cobertura-plugin</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>maven-plugins</groupId>
+            <artifactId>maven-findbugs-plugin</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.googlecode.wmbutil</groupId>
+        <artifactId>wmb-hibernate</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <profiles>
     <profile>
       <id>javadoc</id>
@@ -90,7 +96,6 @@
         <plugins>
           <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.3</version>
             <executions>
               <execution>
                 <id>create-javadoc-jar</id>
@@ -98,7 +103,7 @@
                   <goal>jar</goal>
                 </goals>
                 <configuration>
-                  <source>${maven.compile.source}</source>
+                  <source>${project.build.sourceDirectory}</source>
                 </configuration>
               </execution>
             </executions>
@@ -107,78 +112,5 @@
       </build>
     </profile>
   </profiles>
-  <dependencies>
-    <!-- Message Broker -->
-    <dependency>
-      <groupId>com.ibm.broker</groupId>
-      <artifactId>javacompute</artifactId>
-      <version>8.0.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.ibm.broker</groupId>
-      <artifactId>jplugin2</artifactId>
-      <version>8.0.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.ibm.mq</groupId>
-      <artifactId>headers</artifactId>
-      <version>7.0.1.8</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <!-- Guava -->
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>12.0</version>
-    </dependency>
-
-    <!-- Hibernate -->
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>4.1.4.Final</version>
-    </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.3.162</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Unit tests -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.9</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>1.9.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>jaxen</groupId>
-      <artifactId>jaxen</artifactId>
-      <version>1.1.3</version>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>maven-plugins</groupId>
-          <artifactId>maven-cobertura-plugin</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>maven-plugins</groupId>
-          <artifactId>maven-findbugs-plugin</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-  </dependencies>
 
 </project>
