--- a/wmb-util/pom.xml
+++ b/wmb-util/pom.xml
@@ -80,6 +80,11 @@
       <version>8.0.0.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.ibm.broker</groupId>
+      <artifactId>bipbroker</artifactId>
+      <version>8.0.0.0</version>
+    </dependency>
 
     <dependency>
       <groupId>com.ibm.mq</groupId>
@@ -110,9 +115,29 @@
     </dependency>
 
     <dependency>
-      <groupId>jaxen</groupId>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>3.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.guiceberry</groupId>
+      <artifactId>guiceberry</artifactId>
+      <version>3.1.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.6.0.GA</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.pressassociation.bus.jaxen</groupId>
       <artifactId>jaxen</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.5</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
