--- a/wmb-util/pom.xml
+++ b/wmb-util/pom.xml
@@ -107,49 +107,14 @@
       <version>4.9</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>1.9.0</version>
-      <scope>test</scope>
-    </dependency>
 
-    <dependency>
-      <groupId>com.google.inject</groupId>
-      <artifactId>guice</artifactId>
-      <version>3.0</version>
-      <scope>test</scope>
-    </dependency>
 
-    <dependency>
-      <groupId>com.google.guiceberry</groupId>
-      <artifactId>guiceberry</artifactId>
-      <version>3.1.0</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javassist</groupId>
-      <artifactId>javassist</artifactId>
-      <version>3.6.0.GA</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.pressassociation.bus.jaxen</groupId>
-      <artifactId>jaxen</artifactId>
-      <version>1.1.5</version>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>maven-plugins</groupId>
-          <artifactId>maven-cobertura-plugin</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>maven-plugins</groupId>
-          <artifactId>maven-findbugs-plugin</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
+      <dependency>
+          <groupId>com.googlecode.wmbutil</groupId>
+          <artifactId>wmb-mock</artifactId>
+          <version>${project.version}</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
 </project>
