--- a/wmb-util/pom.xml
+++ b/wmb-util/pom.xml
@@ -108,13 +108,18 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.googlecode.wmbutil</groupId>
+      <artifactId>wmb-mock</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-      <dependency>
-          <groupId>com.googlecode.wmbutil</groupId>
-          <artifactId>wmb-mock</artifactId>
-          <version>${project.version}</version>
-          <scope>test</scope>
-      </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.0</version>
+    </dependency>
   </dependencies>
 
 </project>
