Added clear down methods to pseudo native managers

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     </properties>
 
     <modules>
+        <!--<module>jplugin2-test</module>-->
         <module>wmb-util</module>
         <module>wmb-mock</module>
         <!--<module>wmb-hibernate</module>-->
