Added handling of MbException to prevent errors due to special IBM classloader - we don't need the native log writing so we just suppress this

--- a/wmb-mock/pom.xml
+++ b/wmb-mock/pom.xml
@@ -24,6 +24,11 @@
         </dependency>
         <dependency>
             <groupId>com.ibm.broker</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>8.0.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.broker</groupId>
             <artifactId>jplugininternal</artifactId>
             <version>8.0.0.0</version>
         </dependency>
@@ -65,7 +70,6 @@
             <artifactId>powermock-api-mockito</artifactId>
             <version>${powermock.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>com.pressassociation.bus.jaxen</groupId>
