--- a/wmb-mock/pom.xml
+++ b/wmb-mock/pom.xml
@@ -19,23 +19,23 @@
         <!-- IBM Dependencies -->
         <dependency>
             <groupId>com.ibm.broker</groupId>
-            <artifactId>jplugin2-test</artifactId>
-            <version>8.0.0.0</version>
+            <artifactId>jplugin2</artifactId>
+            <version>${mqsi.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ibm.broker</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>8.0.0.0</version>
+            <version>${mqsi.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ibm.broker</groupId>
             <artifactId>jplugininternal</artifactId>
-            <version>8.0.0.0</version>
+            <version>${mqsi.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ibm.broker</groupId>
             <artifactId>bipbroker</artifactId>
-            <version>8.0.0.0</version>
+            <version>${mqsi.version}</version>
         </dependency>
 
         <!-- Guava -->
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.9</version>
+            <version>4.10</version>
         </dependency>
 
         <!-- Mockito -->
@@ -58,6 +58,26 @@
             <artifactId>mockito-core</artifactId>
             <version>1.9.0</version>
         </dependency>
+
+        <!-- Logging Facade -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <!-- Powermock -->
         <dependency>
@@ -93,6 +113,7 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.5.1</version>
                     <configuration>
                         <source>1.6</source>
                         <target>1.6</target>
