--- a/pom.xml
+++ b/pom.xml
@@ -61,20 +61,20 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.9</version>
-                <scope>test</scope>
+                <!--<scope>test</scope>-->
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>1.9.0</version>
-                <scope>test</scope>
+                <!--<scope>test</scope>-->
             </dependency>
 
             <dependency>
                 <groupId>jaxen</groupId>
                 <artifactId>jaxen</artifactId>
                 <version>1.1.3</version>
-                <scope>test</scope>
+                <!--<scope>test</scope>-->
                 <exclusions>
                     <exclusion>
                         <groupId>maven-plugins</groupId>
