--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,15 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <releaseProfiles>github</releaseProfiles>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
