[maven-release-plugin] prepare release v1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pressassociation.bus</groupId>
     <artifactId>wmb-mock</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>Websphere Message Broker - Mock Framework</name>
     <description>
@@ -52,7 +51,8 @@
         <connection>scm:git:git://github.com/ukcrpb6/wmb-mock</connection>
         <developerConnection>scm:git:git@github.com:ukcrpb6/wmb-mock.git</developerConnection>
         <url>http://www.github.com/ukcrpb6/wmb-mock</url>
-    </scm>
+      <tag>v1.0</tag>
+  </scm>
     <issueManagement>
         <system>github</system>
         <url>https://github.com/ukcrpb6/wmb-mock/issues</url>
